--- a/templates/content/node--card.html.twig
+++ b/templates/content/node--card.html.twig
@@ -79,6 +79,8 @@
   ]
 %}
 {{ attach_library('upanupbase/node') }}
+{{ attach_library('upanupbase/card') }}
+
 <article{{ attributes.addClass(classes) }}>
 
   <div class="card__content">
