--- a/templates/field/field--paragraph--field-images-image.html.twig
+++ b/templates/field/field--paragraph--field-images-image.html.twig
@@ -31,6 +31,7 @@
     label_display == 'visually_hidden' ? 'visually-hidden',
   ]
 %}
+{{ attach_library('upanupbase/images-slider') }}
 <div class="images-slider">
   <div class="images-slider__slider swiper">
   {% if label_hidden %}
