--- a/templates/paragraph/paragraph--horizontal-card.html.twig
+++ b/templates/paragraph/paragraph--horizontal-card.html.twig
@@ -47,6 +47,7 @@
     'card card--horizontal'
   ]
 %}
+{{ attach_library('upanupbase/card') }}
 {% block paragraph %}
   <div{{ attributes.addClass(classes) }}>
     {% block content %}
