--- a/templates/field/field--field-content-rows.html.twig
+++ b/templates/field/field--field-content-rows.html.twig
@@ -32,6 +32,7 @@
     label_display == 'visually_hidden' ? 'visually-hidden',
   ]
 %}
+{{ attach_library('upanupbase/content-row') }}
 
 {% if label_hidden %}
   {% if multiple %}
