--- a/templates/paragraph/paragraph--emphasis.html.twig
+++ b/templates/paragraph/paragraph--emphasis.html.twig
@@ -38,6 +38,7 @@
  * @ingroup themeable
  */
 #}
+{{ attach_library('upanupbase/emphasis') }}
 {% block paragraph %}
   {% block content %}
   {% set hide_icon = false %}
