--- a/templates/paragraph/paragraph--image-and-text.html.twig
+++ b/templates/paragraph/paragraph--image-and-text.html.twig
@@ -47,6 +47,7 @@
     'image-text'
   ]
 %}
+{{ attach_library('upanupbase/image-text') }}
 {% block paragraph %}
   <div{{ attributes.addClass(classes) }}>
     {% block content %}
