--- a/templates/field/field--paragraph--field-images-image.html.twig
+++ b/templates/field/field--paragraph--field-images-image.html.twig
@@ -62,6 +62,7 @@
   {% endif %}
   </div>
   {% if multiple %}
+  {{ attach_library('upanupbase/swiper') }}
   {{ attach_library('upanupbase/images') }}
   <nav class="images-slider__controls slider-controls slider-controls--hidden">
     <button class="slider-controls__button slider-controls__button--prev fas fa-caret-left" tabindex="0"><span class="visually-hidden">Previous</span></button>
