--- a/scss/component/content-row/content-row.scss
+++ b/scss/component/content-row/content-row.scss
@@ -1,1 +1,7 @@
-// Included so upanupstarter can extend the library
+.content-row {
+  display: block;
+  width: 100%;
+  .text-formatted > * > *:last-child {margin-bottom: 0;}
+  .field--name-field-row-title {margin: 0;}
+}
+.content-rows .content-row:last-child {margin-bottom: 0;}
