--- a/templates/navigation/menu--section.html.twig
+++ b/templates/navigation/menu--section.html.twig
@@ -24,6 +24,9 @@
   We call a macro which calls itself to render the full tree.
   @see https://twig.symfony.com/doc/1.x/tags/macro.html
 #}
+
+{{ attach_library('upanupbase/nav--section') }}
+
 {{ menus.menu_links(items, attributes, 0) }}
 
 {% macro menu_links(items, attributes, menu_level) %}
