--- a/css/component/nav/section.css
+++ b/css/component/nav/section.css
@@ -1,44 +1,1 @@
-.sidebar nav .menu__item-link-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  min-height: 50px;
-  position: relative;
-}
-.sidebar nav .menu__item-link-wrapper > *:not(.submenu-trigger) {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 auto;
-          flex: 0 1 auto;
-  display: inline-block;
-  text-decoration: none;
-}
-.sidebar nav .menu__item-link-wrapper .submenu-trigger {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 auto;
-          flex: 0 1 auto;
-}
-.sidebar nav .menu {
-  display: none;
-}
-.sidebar nav .menu .menu__item {
-  margin: 0;
-  position: relative;
-}
-.sidebar nav .menu .menu__item.is-open > .menu {
-  display: block;
-}
-.sidebar nav .menu--level-0 {
-  display: block;
-}
+.sidebar nav .menu__item-link-wrapper{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;-ms-flex-wrap:nowrap;flex-wrap:nowrap;-webkit-box-align:start;-ms-flex-align:start;align-items:flex-start;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;min-height:50px;position:relative}.sidebar nav .menu__item-link-wrapper>:not(.submenu-trigger){-webkit-box-flex:0;-ms-flex:0 1 auto;flex:0 1 auto;display:inline-block;text-decoration:none}.sidebar nav .menu__item-link-wrapper .submenu-trigger{-webkit-box-flex:0;-ms-flex:0 1 auto;flex:0 1 auto}.sidebar nav .menu{display:none}.sidebar nav .menu .menu__item{margin:0;position:relative}.sidebar nav .menu .menu__item.is-open>.menu{display:block}.sidebar nav .menu--level-0{display:block}
