--- a/css/base/nav/nav.css
+++ b/css/base/nav/nav.css
@@ -1,9 +1,1 @@
-nav ol, nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-nav ol li, nav ul li {
-  line-height: inherit;
-  margin: 0;
-}
+nav ol,nav ul{list-style:none;margin:0;padding:0}nav ol li,nav ul li{line-height:inherit;margin:0}
