--- a/css/base/reset/button.css
+++ b/css/base/reset/button.css
@@ -1,14 +1,1 @@
-button,
-.button,
-.btn {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  background: transparent;
-  border: 0;
-  cursor: pointer;
-  font-size: 1rem;
-  margin: 0;
-  padding: 0;
-  text-align: left;
-}
+.btn,.button,button{-webkit-appearance:none;-moz-appearance:none;appearance:none;background:transparent;border:0;cursor:pointer;font-size:1rem;margin:0;padding:0;text-align:left}
