--- a/css/component/node/node.css
+++ b/css/component/node/node.css
@@ -1,7 +1,1 @@
-/**
- * @file
- * Visual styles for nodes.
- */
-.node--unpublished {
-  background-color: #fff4f4;
-}
+.node--unpublished{background-color:#fff4f4}
