--- a/css/state/content-row/row-fade.css
+++ b/css/state/content-row/row-fade.css
@@ -1,28 +1,1 @@
-@media (prefers-reduced-motion: no-preference) {
-  [data-visible] {
-    opacity: 0;
-    -webkit-transform: translate(0, 32px);
-        -ms-transform: translate(0, 32px);
-            transform: translate(0, 32px);
-    -webkit-transition: all 0.2s ease-in-out;
-    -o-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
-    -webkit-transition-property: opacity, -webkit-transform;
-    transition-property: opacity, -webkit-transform;
-    -o-transition-property: opacity, transform;
-    transition-property: opacity, transform;
-    transition-property: opacity, transform, -webkit-transform;
-    -webkit-transition-delay: 0.25s;
-         -o-transition-delay: 0.25s;
-            transition-delay: 0.25s;
-    -webkit-transition-duration: 0.5s;
-         -o-transition-duration: 0.5s;
-            transition-duration: 0.5s;
-  }
-  [data-visible][data-visible=visible] {
-    opacity: 1;
-    -webkit-transform: translate(0);
-        -ms-transform: translate(0);
-            transform: translate(0);
-  }
-}
+@media (prefers-reduced-motion:no-preference){[data-visible]{opacity:0;-webkit-transform:translate(0,32px);-ms-transform:translate(0,32px);transform:translate(0,32px);-webkit-transition:all 0.2s ease-in-out;-o-transition:all 0.2s ease-in-out;transition:all 0.2s ease-in-out;-webkit-transition-property:opacity,-webkit-transform;transition-property:opacity,-webkit-transform;-o-transition-property:opacity,transform;transition-property:opacity,transform;transition-property:opacity,transform,-webkit-transform;-webkit-transition-delay:0.25s;-o-transition-delay:0.25s;transition-delay:0.25s;-webkit-transition-duration:0.5s;-o-transition-duration:0.5s;transition-duration:0.5s}[data-visible][data-visible=visible]{opacity:1;-webkit-transform:translate(0);-ms-transform:translate(0);transform:translate(0)}}
