--- a/scss/component/message/message-layout.scss
+++ b/scss/component/message/message-layout.scss
@@ -1,5 +1,5 @@
-@import "../../variables/line-width";
-@import "../../mixins/unset";
+ @import "../../variables/variables";
+ @import "../../mixins/mixins";
 
 .messages {
   &__message {
