--- a/scss/layout/utility/spacing/gap.scss
+++ b/scss/layout/utility/spacing/gap.scss
@@ -1,5 +1,5 @@
-@import "../../../variables/breakpoints";
-@import "../../../mixins/media-queries";
+ @import "../../../variables/variables";
+ @import "../../../mixins/mixins";
 
 .g-0 {gap: 0px;}
 .g-4 {gap: 4px;}
