--- a/scss/layout/utility/spacing/margin.scss
+++ b/scss/layout/utility/spacing/margin.scss
@@ -1,5 +1,5 @@
-@import "../../../variables/breakpoints";
-@import "../../../mixins/media-queries";
+ @import "../../../variables/variables";
+ @import "../../../mixins/mixins";
 
 .mt-0 {margin-top: 0px;}
 .mr-0 {margin-right: 0px;}
