--- a/scss/layout/utility/layout/grid.scss
+++ b/scss/layout/utility/layout/grid.scss
@@ -1,5 +1,5 @@
-@import "../../../variables/breakpoints";
-@import "../../../mixins/media-queries";
+ @import "../../../variables/variables";
+ @import "../../../mixins/mixins";
 
 .grid {
   display: grid;
