--- a/scss/layout/utility/spacing/padding.scss
+++ b/scss/layout/utility/spacing/padding.scss
@@ -1,5 +1,5 @@
-@import "../../../variables/breakpoints";
-@import "../../../mixins/media-queries";
+ @import "../../../variables/variables";
+ @import "../../../mixins/mixins";
 
 .pt-0 {padding-top: 0px;}
 .pr-0 {padding-right: 0px;}
