--- a/scss/state/utility/media-queries/desktop-hidden.scss
+++ b/scss/state/utility/media-queries/desktop-hidden.scss
@@ -1,5 +1,5 @@
-@import "../../../variables/breakpoints";
-@import "../../../mixins/media-queries";
+ @import "../../../variables/variables";
+ @import "../../../mixins/mixins";
 
 .desktop-hidden {
   @include min($breakpoint--m) {display: none;}
