change from LJ PR

--- a/templates/field/field--paragraph--field-images-image.html.twig
+++ b/templates/field/field--paragraph--field-images-image.html.twig
@@ -65,11 +65,11 @@
   {{ attach_library('upanupbase/swiper') }}
   {{ attach_library('upanupbase/images') }}
   <nav class="images-slider__controls slider-controls slider-controls--hidden">
-    <button class="slider-controls__button slider-controls__button--prev fas fa-caret-left" tabindex="0"><span class="visually-hidden">Previous</span></button>
+    <button class="slider-controls__button slider-controls__button--prev fas fa-caret-left"><span class="visually-hidden">Previous</span></button>
     <span class="slider-controls__index">
       <span class="current">1</span>&nbsp;of&nbsp;<span class="total"></span>
     </span>
-    <button class="slider-controls__button slider-controls__button--next fas fa-caret-right" tabindex="0"><span class="visually-hidden">Next</span></button>
+    <button class="slider-controls__button slider-controls__button--next fas fa-caret-right"><span class="visually-hidden">Next</span></button>
   </nav>
   {% endif %}
 </div>
