--- a/scss-css/state/form/required.scss
+++ b/scss-css/state/form/required.scss
@@ -7,7 +7,7 @@
     content: "";
     vertical-align: super;
     /* Use a background image to prevent screen readers from announcing the text. */
-    background-image: url(../../../../../core/misc/icons/ee0000/required.svg);
+    background-image: url(../../../../../../core/misc/icons/ee0000/required.svg);
     background-repeat: no-repeat;
     background-size: 6px 6px;
   }
