--- a/scss-css/component/accordion/accordion.scss
+++ b/scss-css/component/accordion/accordion.scss
@@ -3,6 +3,7 @@
 .accordion,
 details,
 .webform-element-more {
+  max-width: $line-width;
   &__trigger,
   summary,
   .webform-element-more--link {
