--- a/templates/field/field--paragraph--field-images-image.html.twig
+++ b/templates/field/field--paragraph--field-images-image.html.twig
@@ -31,45 +31,39 @@
     label_display == 'visually_hidden' ? 'visually-hidden',
   ]
 %}
-{{ attach_library('upanupbase/images-slider') }}
-<div class="images-slider">
-  <div class="images-slider__slider swiper">
-  {% if label_hidden %}
-    {% if multiple %}
+
+
+
+{% if items|length > 1 %}
+  {{ attach_library('upanupbase/images-slider') }}
+  {{ attach_library('upanupbase/swiper') }}
+  {{ attach_library('upanupbase/images') }}
+<div class="images-slider"> 
+    <div class="images-slider">
+      <div class="images-slider__slider swiper">
       <{{ field_wrapper_tag }}{{ attributes.addClass(classes, 'field__items images-slider__slides swiper-wrapper').merge(field_wrapper_attributes) }}>
+        {% if label_hidden %}{% else %}<{{ label_tag|default('div') }}{{ title_attributes.addClass(title_classes) }}>{{ label }}</{{ label_tag|default('div') }}>{% endif %}
         {% for item in items %}
           <{{ field_item_wrapper_tag }}{{ item.attributes.addClass('field__item images-slider__slide swiper-slide') }}>{{ item.content }}</{{ field_item_wrapper_tag }}>
         {% endfor %}
-      </{{ field_wrapper_tag }}>
-    {% else %}
-      {% for item in items %}
-        <{{ field_item_wrapper_tag }}{{ attributes.addClass(classes, 'field__item images-slider__slide swiper-slide').merge(item.attributes) }}>{{ item.content }}</{{ field_item_wrapper_tag }}>
-      {% endfor %}
-    {% endif %}
-  {% else %}
-    <{{ field_wrapper_tag }}{{ attributes.addClass(classes).merge(field_wrapper_attributes) }}>
-      <{{ label_tag|default('div') }}{{ title_attributes.addClass(title_classes) }}>{{ label }}</{{ label_tag|default('div') }}>
-      {% if multiple %}
-        <div class="field__items images-slider__slides swiper-wrapper">
-      {% endif %}
-      {% for item in items %}
-        <{{ field_item_wrapper_tag }}{{ item.attributes.addClass('field__item images-slider__slide swiper-slide') }}>{{ item.content }}</{{ field_item_wrapper_tag }}>
-      {% endfor %}
-      {% if multiple %}
-        </div>
-      {% endif %}
-    </{{ field_wrapper_tag }}>
-  {% endif %}
+      </{{ field_wrapper_tag }}> 
+    </div>
+        <nav class="images-slider__controls slider-controls slider-controls--hidden">
+      <button class="slider-controls__button slider-controls__button--prev fas fa-caret-left" tabindex="0"><span class="visually-hidden">Previous</span></button>
+      <span class="slider-controls__index">
+        <span class="current">1</span>&nbsp;of&nbsp;<span class="total"></span>
+      </span>
+      <button class="slider-controls__button slider-controls__button--next fas fa-caret-right" tabindex="0"><span class="visually-hidden">Next</span></button>
+    </nav>
   </div>
-  {% if multiple %}
-  {{ attach_library('upanupbase/swiper') }}
-  {{ attach_library('upanupbase/images') }}
-  <nav class="images-slider__controls slider-controls slider-controls--hidden">
-    <button class="slider-controls__button slider-controls__button--prev fas fa-caret-left"><span class="visually-hidden">Previous</span></button>
-    <span class="slider-controls__index">
-      <span class="current">1</span>&nbsp;of&nbsp;<span class="total"></span>
-    </span>
-    <button class="slider-controls__button slider-controls__button--next fas fa-caret-right"><span class="visually-hidden">Next</span></button>
-  </nav>
-  {% endif %}
-</div>
+
+{% else %} 
+  {{ attach_library('upanupbase/banner--content') }}
+  <div class="banner">
+        <{{ field_wrapper_tag }}{{ attributes.addClass(classes, 'field__items').merge(field_wrapper_attributes) }}>
+        {% for item in items %}
+          <{{ field_item_wrapper_tag }}{{ item.attributes.addClass('field__item') }}>{{ item.content }}</{{ field_item_wrapper_tag }}>
+        {% endfor %}
+        </{{ field_wrapper_tag }}>
+  </div>
+{% endif %}
