utiltiy class fix

--- a/scss-css/layout/utility/layout/flex.scss
+++ b/scss-css/layout/utility/layout/flex.scss
@@ -17,7 +17,7 @@
 .ai-fe {align-items: flex-end;}
 .ai-fs {align-items: flex-start;}
 .ai-s {align-items: stretch;}
-.ai-sb {align-items: space-between;}
+.ai-b {align-items: baseline;}
 .ac-c {align-content: center;}
 .ac-fs {align-content: flex-start;}
 .ac-fe {align-content: flex-end;}
@@ -59,7 +59,7 @@
   .ai-fe-mq-xl {align-items: flex-end;}
   .ai-fs-mq-xl {align-items: flex-start;}
   .ai-s-mq-xl {align-items: stretch;}
-  .ai-sb-mq-xl {align-items: space-between;}
+  .ai-b-mq-xl {align-items: baseline;}
   .ac-c-mq-xl {align-content: center;}
   .ac-fs-mq-xl {align-content: flex-start;}
   .ac-fe-mq-xl {align-content: flex-end;}
@@ -101,7 +101,7 @@
   .ai-fe-mq-l {align-items: flex-end;}
   .ai-fs-mq-l {align-items: flex-start;}
   .ai-s-mq-l {align-items: stretch;}
-  .ai-sb-mq-l {align-items: space-between;}
+  .ai-b-mq-l {align-items: baseline;}
   .ac-c-mq-l {align-content: center;}
   .ac-fs-mq-l {align-content: flex-start;}
   .ac-fe-mq-l {align-content: flex-end;}
@@ -143,7 +143,7 @@
   .ai-fe-mq-m {align-items: flex-end;}
   .ai-fs-mq-m {align-items: flex-start;}
   .ai-s-mq-m {align-items: stretch;}
-  .ai-sb-mq-m {align-items: space-between;}
+  .ai-b-mq-m {align-items: baseline;}
   .ac-c-mq-m {align-content: center;}
   .ac-fs-mq-m {align-content: flex-start;}
   .ac-fe-mq-m {align-content: flex-end;}
@@ -185,7 +185,7 @@
   .ai-fe-mq-s {align-items: flex-end;}
   .ai-fs-mq-s {align-items: flex-start;}
   .ai-s-mq-s {align-items: stretch;}
-  .ai-sb-mq-s {align-items: space-between;}
+  .ai-b-mq-s {align-items: baseline;}
   .ac-c-mq-s {align-content: center;}
   .ac-fs-mq-s {align-content: flex-start;}
   .ac-fe-mq-s {align-content: flex-end;}
@@ -227,7 +227,7 @@
   .ai-fe-mq-xs {align-items: flex-end;}
   .ai-fs-mq-xs {align-items: flex-start;}
   .ai-s-mq-xs {align-items: stretch;}
-  .ai-sb-mq-xs {align-items: space-between;}
+  .ai-b-mq-xs {align-items: baseline;}
   .ac-c-mq-xs {align-content: center;}
   .ac-fs-mq-xs {align-content: flex-start;}
   .ac-fe-mq-xs {align-content: flex-end;}
