--- a/scss-css/component/accordion/accordion.scss
+++ b/scss-css/component/accordion/accordion.scss
@@ -4,6 +4,7 @@
 details,
 .webform-element-more {
   max-width: $line-width;
+  &__heading {margin: 0;}
   &__trigger,
   summary,
   .webform-element-more--link {
