applied important to accordion content display on print

--- a/scss-css/component/accordion/accordion.scss
+++ b/scss-css/component/accordion/accordion.scss
@@ -19,6 +19,7 @@ details,
     display: none;
     max-width: $line-width;
     width: 100%;
+    @media print {display: block !important;}
     > .field__item > *:last-child {margin-bottom: 0;}
   }
   .details-wrapper,
