--- a/scss-css/layout/utility/layout/grid.scss
+++ b/scss-css/layout/utility/layout/grid.scss
@@ -9,7 +9,13 @@
   }
 }
 
-.tc-1 {grid-template-columns: repeat(1,1fr);}
+.tc-1 {
+  grid-template-columns: repeat(1,1fr);
+  > .field__item > .paragraph {
+    height: auto;
+    > * {height: auto;}
+  }
+}
 .tc-2 {grid-template-columns: repeat(2,1fr);}
 .tc-3 {grid-template-columns: repeat(3,1fr);}
 .tc-4 {grid-template-columns: repeat(4,1fr);}
@@ -18,7 +24,13 @@
 .tc-a {grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));}
 
 @include max($breakpoint--xl){
-  .tc-1-mq-xl {grid-template-columns: repeat(1,1fr);}
+  .tc-1-mq-xl {
+    grid-template-columns: repeat(1,1fr);
+    > .field__item > .paragraph {
+      height: auto;
+      > * {height: auto;}
+    }
+  }
   .tc-2-mq-xl {grid-template-columns: repeat(2,1fr);}
   .tc-3-mq-xl {grid-template-columns: repeat(3,1fr);}
   .tc-4-mq-xl {grid-template-columns: repeat(4,1fr);}
@@ -27,7 +39,13 @@
   .tc-a-mq-xl {grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));}
 }
 @include max($breakpoint--l){
-  .tc-1-mq-l {grid-template-columns: repeat(1,1fr);}
+  .tc-1-mq-l {
+    grid-template-columns: repeat(1,1fr);
+    > .field__item > .paragraph {
+      height: auto;
+      > * {height: auto;}
+    }
+  }
   .tc-2-mq-l {grid-template-columns: repeat(2,1fr);}
   .tc-3-mq-l {grid-template-columns: repeat(3,1fr);}
   .tc-4-mq-l {grid-template-columns: repeat(4,1fr);}
@@ -36,7 +54,13 @@
   .tc-a-mq-l {grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));}
 }
 @include max($breakpoint--m){
-  .tc-1-mq-m {grid-template-columns: repeat(1,1fr);}
+  .tc-1-mq-m {
+    grid-template-columns: repeat(1,1fr);
+    > .field__item > .paragraph {
+      height: auto;
+      > * {height: auto;}
+    }
+  }
   .tc-2-mq-m {grid-template-columns: repeat(2,1fr);}
   .tc-3-mq-m {grid-template-columns: repeat(3,1fr);}
   .tc-4-mq-m {grid-template-columns: repeat(4,1fr);}
@@ -45,7 +69,13 @@
   .tc-a-mq-m {grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));}
 }
 @include max($breakpoint--s){
-  .tc-1-mq-s {grid-template-columns: repeat(1,1fr);}
+  .tc-1-mq-s {
+    grid-template-columns: repeat(1,1fr);
+    > .field__item > .paragraph {
+      height: auto;
+      > * {height: auto;}
+    }
+  }
   .tc-2-mq-s {grid-template-columns: repeat(2,1fr);}
   .tc-3-mq-s {grid-template-columns: repeat(3,1fr);}
   .tc-4-mq-s {grid-template-columns: repeat(4,1fr);}
@@ -54,7 +84,13 @@
   .tc-a-mq-s {grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));}
 }
 @include max($breakpoint--xs){
-  .tc-1-mq-xs {grid-template-columns: repeat(1,1fr);}
+  .tc-1-mq-xs {
+    grid-template-columns: repeat(1,1fr);
+    > .field__item > .paragraph {
+      height: auto;
+      > * {height: auto;}
+    }
+  }
   .tc-2-mq-xs {grid-template-columns: repeat(2,1fr);}
   .tc-3-mq-xs {grid-template-columns: repeat(3,1fr);}
   .tc-4-mq-xs {grid-template-columns: repeat(4,1fr);}
