--- a/templates/navigation/pager.html.twig
+++ b/templates/navigation/pager.html.twig
@@ -30,6 +30,7 @@
  * @see template_preprocess_pager()
  */
 #}
+{{ attach_library('upanupbase/nav--pager' )}}
 {% if items %}
   <nav class="pager" role="navigation" aria-labelledby="{{ heading_id }}">
     <h4 id="{{ heading_id }}" class="visually-hidden">{{ 'Pagination'|t }}</h4>
