--- a/scss-css/base/elements/figure.scss
+++ b/scss-css/base/elements/figure.scss
@@ -1,4 +1,38 @@
+@import "../../mixins/mixins";
+@import "../../variables/variables";
+
 figure {
   margin: 0;
   img {display: block;}
+  &.align{ 
+    &-left{
+      margin-top: 5px;
+      margin-right: 16px;
+      max-width: 50%;
+    }
+    &-center{
+      margin-left: auto;
+      margin-right: auto;
+      padding-left: 24px;
+      padding-right: 24px;
+      figcaption{
+        margin-left: 24px;
+        margin-right: 24px;
+      }
+    }
+    &-right{
+      margin-top: 5px;
+      margin-left: 24px;
+      max-width: 50%;
+    }
+    &-left,&-center,&-right{
+      clear: both;     
+        @include max($breakpoint--m){
+          float: initial;
+          margin-left: auto;
+          margin-right: auto;
+          max-width: 100%;
+       }
+    }
+  }
 }
