--- a/scss-css/base/elements/figure.scss
+++ b/scss-css/base/elements/figure.scss
@@ -3,36 +3,46 @@
 
 figure {
   margin: 0;
-  img {display: block;}
-  &.align{ 
-    &-left{
-      margin-top: 5px;
-      margin-right: 16px;
-      max-width: 50%;
-    }
-    &-center{
-      margin-left: auto;
-      margin-right: auto;
-      padding-left: 24px;
-      padding-right: 24px;
-      figcaption{
-        margin-left: 24px;
-        margin-right: 24px;
+  img {
+    display: block;
+  }
+}
+.text-formatted > .field__item {
+  > figure,
+  > article.media {
+    &.align {
+      &-left {
+        margin-right: 16px;
       }
-    }
-    &-right{
-      margin-top: 5px;
-      margin-left: 24px;
-      max-width: 50%;
-    }
-    &-left,&-center,&-right{
-      clear: both;     
-        @include max($breakpoint--m){
+      &-right {
+        margin-left: 24px;
+      }
+      &-center {
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 24px;
+        padding-right: 24px;
+        figcaption {
+          margin-left: 24px;
+          margin-right: 24px;
+        }
+      }
+      &-left,
+      &-right {
+        margin-top: 5px;
+        max-width: calc($line-width / 2);
+      }
+      &-left,
+      &-center,
+      &-right {
+        clear: both;
+        @include max($breakpoint--m) {
           float: initial;
           margin-left: auto;
           margin-right: auto;
           max-width: 100%;
-       }
+        }
+      }
     }
   }
 }
