--- a/templates/views/views-view-calendar.html.twig
+++ b/templates/views/views-view-calendar.html.twig
@@ -41,22 +41,38 @@
 {% block libraries %}
 {% endblock %}
 
-{% block calendars %}
-  <div class="view-calendar">
-    {{ calendars }}
-  </div>
-{% endblock %}
 
-{% block rows %}
-  {% if options.display_rows %}
-  {{ attach_library('upanupbase/calendar') }}
-    <div class="view-results">
-      {% for row in rows %}
-        {% set row_classes = [ default_row_class ? 'views-row'] %}
-        <div{{ row.attributes.addClass(row_classes) }} data-calendar-view-day="{{ row.content['#row'].node__field_when_field_when_value|date('d') }}" data-calendar-view-month="{{ row.content['#row'].node__field_when_field_when_value|date('m') }}" data-calendar-list-result>
-          {{- row.content -}}
-        </div>
-      {% endfor %}
+{{ attach_library('upanupbase/tabs') }}
+{{ attach_library('upanupbase/calendar_list') }}
+<div class="tabs">
+  <ul class="tabs__list" role="tablist">
+    <li class="tabs__list-item tabs__list-item--selected" role="presentation">
+      <a href="#panel--calendar" role="tab" id="tab--calendar" aria-controls="panel--calendar" aria-selected="true" tabindex="0">Calendar</a>
+    </li>
+    <li class="tabs__list-item" role="presentation">
+      <a href="#panel--list" role="tab" id="tab--list" aria-controls="panel--list" aria-selected="false" tabindex="-1">List</a>
+    </li>
+  </ul>
+  <div class="tabs__panels">
+    <div class="tabs__panel" id="panel--calendar" role="tabpanel" aria-labelledby="tab--calendar">
+      {% block calendars %}
+      <div class="view-calendar">
+        {{ calendars }}
+      </div>
+      {% endblock %}
     </div>
-  {% endif %}
-{% endblock %}
+    <div class="tabs__panel tabs__panel--hidden" id="panel--list" role="tabpanel" aria-labelledby="tab--list">
+      {% block rows %}
+      {% if options.display_rows == 0 %}{{ attach_library('upanupbase/calendar_no_list') }}{% endif %}
+        <div class="view-results">
+          {% for row in rows %}
+            {% set row_classes = [ default_row_class ? 'views-row'] %}
+            <div{{ row.attributes.addClass(row_classes) }} data-calendar-view-day="{{ row.content['#row'].node__field_when_field_when_value|date('d') }}" data-calendar-view-month="{{ row.content['#row'].node__field_when_field_when_value|date('m') }}" data-calendar-list-result>
+              {{- row.content -}}
+            </div>
+          {% endfor %}
+        </div>
+      {% endblock %}
+    </div>
+  </div>
+</div>
