--- a/scss-css/component/tabs/panel.css
+++ b/scss-css/component/tabs/panel.css
@@ -1,1 +1,1 @@
-.tabs__panel{display:block;padding:1rem;width:100%}.tabs__panel--hidden{display:none}
+.tabs-component__panel{display:block;padding:24px;width:100%}.tabs-component__panel--hidden{display:none}
