--- a/scss-css/component/tabs/panel.scss
+++ b/scss-css/component/tabs/panel.scss
@@ -1,6 +1,6 @@
-.tabs__panel {
+.tabs-component__panel {
   display: block;
-  padding: 1rem;
+  padding: 24px;
   width: 100%;
   &--hidden {display: none;}
 }
