--- a/templates/views/views-view-calendar.html.twig
+++ b/templates/views/views-view-calendar.html.twig
@@ -44,7 +44,7 @@
 
 {{ attach_library('upanupbase/tabs_component') }}
 {{ attach_library('upanupbase/calendar_list') }}
-<div class="tabs-component">
+<div class="tabs-component" data-tab-attrs-set="false">
   <ul class="tabs-component__list">
     <li class="tabs-component__list-item">
       <a href="#panel--calendar">Calendar</a>
@@ -74,5 +74,25 @@
         </div>
       {% endblock %}
     </div>
+  </div>
+</div>
+
+{{ attach_library('upanupbase/tabs_component_mobile') }}
+<div class="tabs-component" data-tabs-mobile="true" data-tab-attrs-set="false">
+  <ul class="tabs-component__list">
+    <li class="tabs-component__list-item">
+      <a href="#panel--first">First</a>
+    </li>
+    <li class="tabs-component__list-item">
+      <a href="#panel--second">Second</a>
+    </li>
+    <li class="tabs-component__list-item">
+      <a href="#panel--third">Third</a>
+    </li>
+  </ul>
+  <div class="tabs-component__panels">
+    <div class="tabs-component__panel" id="panel--first">Content 1</div>
+    <div class="tabs-component__panel" id="panel--second">Content 2</div>
+    <div class="tabs-component__panel" id="panel--third">Content 3</div>
   </div>
 </div>
