--- a/templates/views/views-view-calendar.html.twig
+++ b/templates/views/views-view-calendar.html.twig
@@ -47,22 +47,22 @@
 {{ attach_library('upanupbase/calendar_list') }}
 <div class="tabs-component" data-tab-attrs-set="false" data-tab-type="static">
   <ul class="tabs-component__list">
-    <li class="tabs-component__list-item tabs-component__list-item--selected">
-      <a href="#panel--calendar" aria-selected="true">Calendar</a>
+    <li class="tabs-component__list-item tabs-component__list-item--selected" role="presentation">
+      <a href="#panel--calendar" aria-selected="true" role="tab" id="list-item--TABIDPLACEHOLDER--panel--calendar" aria-controls="panel--TABIDPLACEHOLDER--panel--calendar">Calendar</a>
     </li>
-    <li class="tabs-component__list-item">
-      <a href="#panel--list" aria-selected="false" tabindex="-1">List</a>
+    <li class="tabs-component__list-item" role="presentation">
+      <a href="#panel--list" aria-selected="false" tabindex="-1" role="tab" id="list-item--TABIDPLACEHOLDER--panel--list" aria-controls="panel--TABIDPLACEHOLDER--panel--list">List</a>
     </li>
   </ul>
   <div class="tabs-component__panels">
-    <div class="tabs-component__panel" id="panel--calendar">
+    <div class="tabs-component__panel" id="panel--calendar" role="tabpanel" aria-labelledby="list-item--TABIDPLACEHOLDER--panel--calendar">
       {% block calendars %}
       <div class="view-calendar">
         {{ calendars }}
       </div>
       {% endblock %}
     </div>
-    <div class="tabs-component__panel tabs-component__panel--hidden" id="panel--list">
+    <div class="tabs-component__panel tabs-component__panel--hidden" id="panel--list" role="tabpanel" aria-labelledby="list-item--TABIDPLACEHOLDER--panel--list">
       {% block rows %}
       {% if options.display_rows == 0 %}{{ attach_library('upanupbase/calendar_no_list') }}{% endif %}
         <div class="view-results list-view">
