empty nav check

--- a/templates/block/block--system-menu-block.html.twig
+++ b/templates/block/block--system-menu-block.html.twig
@@ -41,6 +41,8 @@
   ]
 %}
 {% set heading_id = attributes.id ~ '-menu'|clean_id %}
+{% block content %}
+{% if content|render is not empty %}
 <nav role="navigation" aria-labelledby="{{ heading_id }}"{{ attributes.addClass(classes)|without('role', 'aria-labelledby') }}>
   {# Label. If not displayed, we still provide it for screen readers. #}
   {% if not configuration.label_display %}
@@ -51,7 +53,7 @@
   {{ title_suffix }}
 
   {# Menu. #}
-  {% block content %}
     {{ content }}
-  {% endblock %}
 </nav>
+{% endif %}
+{% endblock %}
