quicklinks, checkbox, radio updates

--- a/scss-css/base/form/checkbox.scss
+++ b/scss-css/base/form/checkbox.scss
@@ -1,9 +1,9 @@
-.form-type-checkbox {
+.form-item.form-type-checkbox {
   display: block;
   margin: 0 !important;
   position: relative;
   width: 100%;
-  label.option {
+  label {
     background-color: transparent;
     display: inline-block;
     margin-bottom:0;
@@ -33,7 +33,7 @@ input[type=checkbox] {
   &:hover, &:active {
     &:focus {outline: none;}
   }
-  &:checked ~ label.option {
+  &:checked ~ label {
     &::before {
       display:inline-block;
     }
@@ -42,6 +42,16 @@ input[type=checkbox] {
   &.disabled,
   fieldset[disabled] & {
     cursor: not-allowed;
+  }
+}
+
+.form-item.form-type-checkbox.form-item-title-before {
+  label::before {
+    left: auto;
+    right: 0;
+  }
+  &:has(input[type=checkbox]:checked) {
+    label::before {display: inline-block;}
   }
 }
 
