add email template logo

--- a/templates/module/cyberimpact_mailout.html.twig
+++ b/templates/module/cyberimpact_mailout.html.twig
@@ -22,7 +22,7 @@
 		<tbody style="border-collapse:collapse;font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;font-size:16px;color:#141414;line-height:32px;">
 			<tr>
 				<td valign="top" style="padding:24px;">
-					<p style="text-align:center;"><img style="width:194px;max-width:194px;min-width:194px;" src="{{ url('<front>') }}sites/default/files/logo.jpg" alt="logo"></p>
+					<p style="text-align:center;"><img style="width:194px;max-width:194px;min-width:194px;" src="https://www.upanup.com/sites/default/files/demo-logo.png" alt="logo"></p>
 
 					<h1>{{ entity.title.value }}</h1>
 					
