updated image and text, ToC for twig caching

--- a/templates/paragraph/paragraph--image-and-text.html.twig
+++ b/templates/paragraph/paragraph--image-and-text.html.twig
@@ -59,6 +59,7 @@
       {{ content.field_content }}
       {{ content.field_image }}
     {% endif %}
+    {{ content|without('field_layout','field_image','field_content') }}
     {% endblock %}
   </div>
 {% endblock paragraph %}
