row fade updates, global js update, scrollable update, media alignment

--- a/scss-css/base/elements/figure.scss
+++ b/scss-css/base/elements/figure.scss
@@ -7,9 +7,9 @@ figure {
     display: block;
   }
 }
-.text-formatted > .field__item {
-  > figure,
-  > article.media {
+.text-formatted {
+  figure,
+  article.media {
     &.align {
       &-left {
         margin-right: 16px;
