--- a/scss-css/layout/utility/spacing/margin.scss
+++ b/scss-css/layout/utility/spacing/margin.scss
@@ -13,65 +13,65 @@ $queries: (xl, l, m, s, xs);
 
 @for $i from 0 through 80 {
   .m-#{$i} {
-    padding: #{$i}px !important;
+    margin: #{$i}px !important;
     @each $query in $queries {
       &-mq-#{$query} {
-        @include max(map-get($breakpoints, $query)) {padding: #{$i}px !important;}
+        @include max(map-get($breakpoints, $query)) {margin: #{$i}px !important;}
       }
     }
   }
   .mt-#{$i} {
-    padding-top: #{$i}px !important;
+    margin-top: #{$i}px !important;
     @each $query in $queries {
       &-mq-#{$query} {
-        @include max(map-get($breakpoints, $query)) {padding-top: #{$i}px !important;}
+        @include max(map-get($breakpoints, $query)) {margin-top: #{$i}px !important;}
       }
     }
   }
   .mr-#{$i} {
-    padding-right: #{$i}px !important;
+    margin-right: #{$i}px !important;
     @each $query in $queries {
       &-mq-#{$query} {
-        @include max(map-get($breakpoints, $query)) {padding-right: #{$i}px !important;}
+        @include max(map-get($breakpoints, $query)) {margin-right: #{$i}px !important;}
       }
     }
   }
   .mb-#{$i} {
-    padding-bottom: #{$i}px !important;
+    margin-bottom: #{$i}px !important;
     @each $query in $queries {
       &-mq-#{$query} {
-        @include max(map-get($breakpoints, $query)) {padding-bottom: #{$i}px !important;}
+        @include max(map-get($breakpoints, $query)) {margin-bottom: #{$i}px !important;}
       }
     }
   }
   .ml-#{$i} {
-    padding-left: #{$i}px !important;
+    margin-left: #{$i}px !important;
     @each $query in $queries {
       &-mq-#{$query} {
-        @include max(map-get($breakpoints, $query)) {padding-left: #{$i}px !important;}
+        @include max(map-get($breakpoints, $query)) {margin-left: #{$i}px !important;}
       }
     }
   }
   .mx-#{$i} {
-    padding-left: #{$i}px !important;
-    padding-right: #{$i}px !important;
+    margin-left: #{$i}px !important;
+    margin-right: #{$i}px !important;
     @each $query in $queries {
       &-mq-#{$query} {
         @include max(map-get($breakpoints, $query)) {
-          padding-left: #{$i}px !important;
-          padding-right: #{$i}px !important;
+          margin-left: #{$i}px !important;
+          margin-right: #{$i}px !important;
         }
       }
     }
   }
   .my-#{$i} {
-    padding-top: #{$i}px !important;
-    padding-bottom: #{$i}px !important;
+    margin-top: #{$i}px !important;
+    margin-bottom: #{$i}px !important;
     @each $query in $queries {
       &-mq-#{$query} {
         @include max(map-get($breakpoints, $query)) {
-          padding-top: #{$i}px !important;
-          padding-bottom: #{$i}px !important;
+          margin-top: #{$i}px !important;
+          margin-bottom: #{$i}px !important;
         }
       }
     }
